--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ai-sdk/react": "^3.0.69",
     "@hookform/resolvers": "^3.10.0",
+    "@langchain/textsplitters": "^1.0.1",
+    "@openrouter/sdk": "^0.5.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -40,6 +42,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-three/drei": "10.7.7",
     "@react-three/fiber": "9.5.0",
+    "@supabase/supabase-js": "^2.93.3",
     "@vercel/analytics": "1.3.1",
     "ai": "6.0.66",
     "autoprefixer": "^10.4.20",
@@ -47,6 +50,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "8.5.1",
     "expo": "~54.0.33",
     "expo-asset": "latest",
@@ -67,7 +71,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "0.182.0",
-    "vaul": "^0.9.9",
+    "vaul": "^1.1.2",
     "zod": "3.25.76"
   },
   "devDependencies": {
